2007-01-06  Till Kamppeter <till.kamppeter@gmail.com>

	* README, USAGE, README.build-foomatic-filters-ppds,
	  foomatic-addpjloptions.8.in, foomatic-combo-xml.1.in,
	  foomatic-compiledb.1.in, Foomatic-Devel-Ideas.txt,
	  foomatic-filters-ppds-README, foomatic-kitload.8.in,
	  foomatic-ppdfile.1.in, lib/Foomatic/DB.pm, debian/control,
	  debian/copyright, debian/foomatic-bin.README.Debian,
	  debian/README.Debian: Updated texts and links to have
	  "http://www.openprinting.org/" and "FSG OpenPrinting".

2007-01-04  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppdfile.1.in: Corrected mark-up in the man page for
	  foomatic-ppdfile (Thanks to Eric Raymond for his man page
	  verification bot).

2006-11-09  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-combo-xml.c, foomatic-ppdfile.in, lib/Foomatic/DB.pm:
	  Let the listing of auto-generatable PPD files for CUPS 1.2
	  ("foomatic-ppdfile list") not contain entries for combos of
	  printers with driver entries with a ready-made PPD file, as
	  these PPD files are usually listed by CUPS directly.

2006-09-25  Till Kamppeter <till.kamppeter@gmx.net>

	* Makefile.in: Added forgotten DESTDIR (upstream merge from Debian 
	  patch).

	* foomatic-combo-xml.c: Several small stability fixes in the C code
	  (upstream merge from Debian patch).

	* foomatic-configure.in: If there is a user named "cupsys", switch
	  the ownership of the PPD files to "cupsys", this way Ubuntu does
	  not break on running CUPS as non-root. This does not affect
	  other distributions (upstream merge from Debian patch).

	* foomatic-printjob.in: Added help for the printer-specific
	  options (upstream merge from Debian patch).

	* foomatic-getpjloptions.8.in: Typo fix (upstream merge from
	  Debian patch).

	* foomatic-printjob.1.in: Text fixes, new help on printer options
	  mentioned (upstream merge from Debian patch).

2006-09-22  Till Kamppeter <till.kamppeter@gmx.net>
