@@ -1,3 +1,8 @@
+2007-02-06  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* foomatic-perl-data.c: Added support for more driver types:
+	  CUPS Raster, IJS, and OpenPrinting Vector.
+
 2007-01-06  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* README, USAGE, README.build-foomatic-filters-ppds,
